# sentaku-rs

./: Cargo.toml  README.md
examples/: fruits.rs  multi_fruits.rs
src/: cli.rs  lib.rs
