[package]
name = "sentaku"
version = "0.1.2"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2018"
license = "MIT"
repository = "https://github.com/garasubo/sentaku-rs"
description = "Provide sentaku CUI interface"
documentation = "https://docs.rs/sentaku/"
readme = "README.md"

[dependencies]
termion = "1.5.5"

[dev-dependencies]
webbrowser = "0.5.2"
