[package]
name = "sentaku"
version = "0.4.1"
authors = ["garasubo <garasubo@gmail.com>"]
edition = "2021"
license = "MIT"
repository = "https://github.com/garasubo/sentaku-rs"
description = "Provide sentaku CUI interface"
documentation = "https://docs.rs/sentaku/"
readme = "README.md"

[dependencies]
termion = "2.0.1"

[dev-dependencies]
webbrowser = "0.8.10"
